Finalize project: Remove deprecated code, implement Typewriter Scrolling, expand search tests
- Deleted deprecated `packages/editor` directory.
- Implemented `TypewriterScrollingPlugin` in `LexicalEditor.tsx` and integrated it into `NoteEditor.tsx` for distraction-free writing.
- Expanded Core-RS test suite with `advanced_search_tests.rs` covering:
    - SQL injection resilience.
    - Unicode handling (Kanji, Cyrillic) for search.
    - Empty/Whitespace query behavior.
- Enhanced `packages/core-rs/src/search/mod.rs` with explicit input sanitization and safer FTS5 query construction.
- Updated documentation:
    - `docs/audit_reports/EXECUTIVE_SUMMARY.md`: Reflected resolved risks and production-ready status.
    - `docs/wiki/03_Development/Security_Audit.md`: Logged audit completion and new test coverage.
    - `docs/project/STATUS.md`: Marked Typewriter Mode and Search improvements as complete.
    - Archived legacy reports to `docs/reports/archive/`.
- Verified all changes with tests and manual checks.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-node_modules
-.DS_Store
-target/
-dist/
-build/
+/target
+/dist
+/node_modules
+**/.DS_Store
 *.log
-coverage/
-.coverage/
+.env
+.idea
+.vscode
+*.swp
